# RustFoundation

./: .dockerignore  .env  Cargo.toml  Dockerfile
.sqlx/: query-3ed93e2ebe647dede6eb3269b378daf8145e4da97f94b4556606a004c0fe4a7b.json  query-7f8180b71331d2b03816f5354f02c11e0bd21683db0d04c78b6e552e190871d3.json  query-8395b6562226e1c775d578ebe20e7dc2c26854c89a7f6fc3a63fe8490a7a54b2.json
src/: apis.rs  foundation.rs  main.rs
src/apis/: routes.rs  task_routes.rs
src/foundation/: basic_types_and_vars.rs  collection_types_and_vars.rs  object_types_and_vars.rs
